fix: accordions not animating on firefox or apple devices

--- a/css/main.css
+++ b/css/main.css
@@ -15,6 +15,10 @@
     overflow: hidden;
   }
 
+  html {
+    interpolate-size: allow-keywords;
+  }
+
   :focus-visible {
     @apply outline-offset-3 outline-primary-one outline-2;
   }
